<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">康佳音乐</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="there_is_no_song_yet">没有歌曲</string>
    <string name="sdcard_cannot_use">SD卡暂时不可用</string>
    <string name="loading_hardly">正在努力加载</string>
    <string name="unknown_artist">未知艺术家</string>
    <string name="there_is_no_lyric_yet">暂无歌词</string>
    <string name="spread_good_music">传播好音乐</string>
    <string name="imagecontentDescription">imagecontentDescription</string>

</resources>
